* Fix split IAM groups from IAM users. This is just a personal preference to split different type of resources into different models and controllers to make it easy to maintain
